force-app/main/default/objects/Wage_Deficiency_Type__c/Wage_Deficiency_Type__c.object-meta.xml
<CustomObject>
    <label>Wage Deficiency Type</label>
    <nameField>
        <displayFormat>WD-{00000}</displayFormat>
        <label>Wage Deficiency Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wage Deficiency Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>