force-app/main/default/objects/Wage_Deficiency_Type__c/fields/Option_Code__c.field-meta.xml
<CustomField>
    <fullName>Option_Code__c</fullName>
    <label>Option Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>