force-app/main/default/objects/Wage_Deficiency_Type__c/fields/Option_Label_English__c.field-meta.xml
<CustomField>
    <fullName>Option_Label_English__c</fullName>
    <label>Option Label English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>