force-app/main/default/objects/Wage_Deficiency_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Option_Label_English__c</columns>
    <columns>Order__c</columns>
    <columns>Option_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>